--- a/mybulma/css/mystyles.css
+++ b/mybulma/css/mystyles.css
@@ -23,7 +23,7 @@
   width: 0.625em; }
 
 .title:not(:last-child),
-.subtitle:not(:last-child), .block:not(:last-child), .level:not(:last-child) {
+.subtitle:not(:last-child), .block:not(:last-child), .progress:not(:last-child), .level:not(:last-child) {
   margin-bottom: 1.5rem; }
 
 .delete {
@@ -1541,6 +1541,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   .is-invisible-fullhd {
     visibility: hidden !important; } }
 
+/* Bulma Base */
 /*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
 html,
 body,
@@ -1841,6 +1842,134 @@ table th {
   padding: 0.25rem 0.5rem;
   text-align: center;
   vertical-align: top; }
+
+.progress {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  border: none;
+  border-radius: 9999px;
+  display: block;
+  height: 1rem;
+  overflow: hidden;
+  padding: 0;
+  width: 100%; }
+  .progress::-webkit-progress-bar {
+    background-color: #ffabaf; }
+  .progress::-webkit-progress-value {
+    background-color: #ff5555; }
+  .progress::-moz-progress-bar {
+    background-color: #ff5555; }
+  .progress::-ms-fill {
+    background-color: #ff5555;
+    border: none; }
+  .progress.is-white::-webkit-progress-value {
+    background-color: white; }
+  .progress.is-white::-moz-progress-bar {
+    background-color: white; }
+  .progress.is-white::-ms-fill {
+    background-color: white; }
+  .progress.is-white:indeterminate {
+    background-image: linear-gradient(to right, white 30%, #ffabaf 30%); }
+  .progress.is-black::-webkit-progress-value {
+    background-color: #0a0a0a; }
+  .progress.is-black::-moz-progress-bar {
+    background-color: #0a0a0a; }
+  .progress.is-black::-ms-fill {
+    background-color: #0a0a0a; }
+  .progress.is-black:indeterminate {
+    background-image: linear-gradient(to right, #0a0a0a 30%, #ffabaf 30%); }
+  .progress.is-light::-webkit-progress-value {
+    background-color: whitesmoke; }
+  .progress.is-light::-moz-progress-bar {
+    background-color: whitesmoke; }
+  .progress.is-light::-ms-fill {
+    background-color: whitesmoke; }
+  .progress.is-light:indeterminate {
+    background-image: linear-gradient(to right, whitesmoke 30%, #ffabaf 30%); }
+  .progress.is-dark::-webkit-progress-value {
+    background-color: #363636; }
+  .progress.is-dark::-moz-progress-bar {
+    background-color: #363636; }
+  .progress.is-dark::-ms-fill {
+    background-color: #363636; }
+  .progress.is-dark:indeterminate {
+    background-image: linear-gradient(to right, #363636 30%, #ffabaf 30%); }
+  .progress.is-primary::-webkit-progress-value {
+    background-color: #00d1b2; }
+  .progress.is-primary::-moz-progress-bar {
+    background-color: #00d1b2; }
+  .progress.is-primary::-ms-fill {
+    background-color: #00d1b2; }
+  .progress.is-primary:indeterminate {
+    background-image: linear-gradient(to right, #00d1b2 30%, #ffabaf 30%); }
+  .progress.is-link::-webkit-progress-value {
+    background-color: #485fc7; }
+  .progress.is-link::-moz-progress-bar {
+    background-color: #485fc7; }
+  .progress.is-link::-ms-fill {
+    background-color: #485fc7; }
+  .progress.is-link:indeterminate {
+    background-image: linear-gradient(to right, #485fc7 30%, #ffabaf 30%); }
+  .progress.is-info::-webkit-progress-value {
+    background-color: #3e8ed0; }
+  .progress.is-info::-moz-progress-bar {
+    background-color: #3e8ed0; }
+  .progress.is-info::-ms-fill {
+    background-color: #3e8ed0; }
+  .progress.is-info:indeterminate {
+    background-image: linear-gradient(to right, #3e8ed0 30%, #ffabaf 30%); }
+  .progress.is-success::-webkit-progress-value {
+    background-color: #48c78e; }
+  .progress.is-success::-moz-progress-bar {
+    background-color: #48c78e; }
+  .progress.is-success::-ms-fill {
+    background-color: #48c78e; }
+  .progress.is-success:indeterminate {
+    background-image: linear-gradient(to right, #48c78e 30%, #ffabaf 30%); }
+  .progress.is-warning::-webkit-progress-value {
+    background-color: #ffe08a; }
+  .progress.is-warning::-moz-progress-bar {
+    background-color: #ffe08a; }
+  .progress.is-warning::-ms-fill {
+    background-color: #ffe08a; }
+  .progress.is-warning:indeterminate {
+    background-image: linear-gradient(to right, #ffe08a 30%, #ffabaf 30%); }
+  .progress.is-danger::-webkit-progress-value {
+    background-color: #f14668; }
+  .progress.is-danger::-moz-progress-bar {
+    background-color: #f14668; }
+  .progress.is-danger::-ms-fill {
+    background-color: #f14668; }
+  .progress.is-danger:indeterminate {
+    background-image: linear-gradient(to right, #f14668 30%, #ffabaf 30%); }
+  .progress:indeterminate {
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-name: moveIndeterminate;
+    animation-timing-function: linear;
+    background-color: #ffabaf;
+    background-image: linear-gradient(to right, #4a4a4a 30%, #ffabaf 30%);
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: 150% 150%; }
+    .progress:indeterminate::-webkit-progress-bar {
+      background-color: transparent; }
+    .progress:indeterminate::-moz-progress-bar {
+      background-color: transparent; }
+    .progress:indeterminate::-ms-fill {
+      animation-name: none; }
+  .progress.is-small {
+    height: 0.75rem; }
+  .progress.is-medium {
+    height: 1.25rem; }
+  .progress.is-large {
+    height: 1.5rem; }
+
+@keyframes moveIndeterminate {
+  from {
+    background-position: 200% 0; }
+  to {
+    background-position: -200% 0; } }
 
 .navbar {
   background-color: #759eff;
